tests/baselines/reference/emptyVariableDeclarationBindingPatterns02_ES6.errors.txt
emptyVariableDeclarationBindingPatterns02_ES6.ts(2,9): error TS1182: A destructuring declaration must have an initializer.
emptyVariableDeclarationBindingPatterns02_ES6.ts(3,9): error TS1182: A destructuring declaration must have an initializer.
emptyVariableDeclarationBindingPatterns02_ES6.ts(4,11): error TS1182: A destructuring declaration must have an initializer.
emptyVariableDeclarationBindingPatterns02_ES6.ts(6,9): error TS1182: A destructuring declaration must have an initializer.
emptyVariableDeclarationBindingPatterns02_ES6.ts(7,9): error TS1182: A destructuring declaration must have an initializer.
emptyVariableDeclarationBindingPatterns02_ES6.ts(8,11): error TS1182: A destructuring declaration must have an initializer.


==== emptyVariableDeclarationBindingPatterns02_ES6.ts (6 errors) ====
    (function () {
        var {};
            ~~
!!! error TS1182: A destructuring declaration must have an initializer.
        let {};
            ~~
!!! error TS1182: A destructuring declaration must have an initializer.
        const {};
              ~~
!!! error TS1182: A destructuring declaration must have an initializer.
    
        var [];
            ~~
!!! error TS1182: A destructuring declaration must have an initializer.
        let [];
            ~~
!!! error TS1182: A destructuring declaration must have an initializer.
        const [];
              ~~
!!! error TS1182: A destructuring declaration must have an initializer.
    })();